2008-04-06  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.cpp: Patch from Thiago Macieira in KDE
	commit 794048. You're not allowed to use C99 variable-length in C++.

	* libavogadro/src/periodictableview.h: Only export the
	PeriodicTableView class.

	* libavogadro/src/tools/navigatetool.cpp: Remember to account for the
	situation where no molecule is loaded.

	* libavogadro/src/global.h: Added visibility attributes to the
	A_EXPORT definitions so that our symbols are correctly exported when
	the default visibility is changed to hidden (as in KDE 4.1 trunk).

2008-04-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/aligntool.h,
	libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/aligntool.qrc,
	libavogadro/src/tools/CMakeLists.txt: Added new align tool. Currently
	it just aligns the selected atom to the origin, if there are two
	selected atoms they will be aligned along the chosen axis.

2008-04-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/axesengine.*,
	libavogadro/src/engines/CMakeLists.txt: Added new axes engine to
	display the x, y, z axes in the scene. More options soon.

2008-04-01  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gamessinputdialog.cpp: Correct bug where
	nd was also being used to set np in the basic tab.

2008-03-23  Donald E. Curtis <dcurtis3@sourceforge.net>

	* avogadro/src/mainwindow.cpp: when extensions reqest a new menu item they
	are put in before the settings menu.

	* libavogadro/src/extensions/pythonextension.*: the python extension now
	searches $prefix/share/libavogadro-VERSION/scripts and
	$HOME/.avogadro/scripts for python scripts to load.  There are some
	examples in the libavogadro/src/extensions/python/ directory.

	* libavogadro/src/pythoninterpreter.*: made some fixes and updates to the
	python interpreter to allow evaluation and execution easier with custom
	local namespaces.
